--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "engines": {
     "node": "6.11.1"
   },
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server.js",
     "test": "node test.js"
   },
   "dependencies": {
+    "axios": "^0.16.2",
+    "dotenv": "4.0.0",
     "ejs": "2.5.6",
-    "express": "4.15.2", 
-    "dotenv": "4.0.0"
+    "express": "4.15.2",
+    "redis": "^2.8.0",
+    "response-time": "^2.3.2"
   },
   "devDependencies": {
     "request": "^2.81.0",
